--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 <body>
     <div class="container">
         <div class="poster-field">
-            <div class="poster"></div>
+            <div id="poster" class="poster"><img id="poster-img" src="#"></div>
         </div>
         <div class="info-field">
             <div class="img"><img src="icons/logo.png"></div>
-            <div class="text"></div>
-            <div class="upper"></div>
-            <div class="open-est"><p>Linnus avatud T-P 10.00-18.00 <br> E 11.00-16.00</p></div>
-            <div class="open-eng"><p>Linnus avatud T-P 10.00-18.00 <br> E 11.00-16.00</p></div>
-            <div class="info">
-                <img src="icons/email.png"><p>muuseum@saaremaamuuseum.ee</p>
-                <img src="icons/phone.png"><p>+372 455 4463</p>
-                <img src="icons/website.png"><p>www.saaremaamuuseum.ee</p>
+            <div class="text">
+                <div class="upper">
+                    <div class="open-est"><p>Linnus avatud T-P 10.00-18.00 <br> E 11.00-16.00</p></div>
+                    <div class="open-eng"><p>Linnus avatud T-P 10.00-18.00 <br> E 11.00-16.00</p></div>
+                </div>
+                <div class="info">
+                    <img src="icons/email.png"><p>muuseum@saaremaamuuseum.ee</p>
+                    <img src="icons/phone.png"><p>+372 455 4463</p>
+                    <img src="icons/website.png"><p>www.saaremaamuuseum.ee</p>
+                </div>
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
