--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="poster-field">
-            <div class="poster"></div>
+            <div id="poster" class="poster"><img id="poster-img" src="#"></div>
         </div>
 
         <div class="info-field">
@@ -29,6 +29,7 @@
                 <div class="open-eng"><p>Opening hours: <br> Tu-Su 10.00-18.00 <br> Mo 11.00-16.00</p></div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
 
