added setTime function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="poster-field">
-            <div id="poster" class="poster"><img id="poster-img" src="#"></div>
+            <div id="poster" class="poster"><img id="poster-img" src="icons/logo1.jpg"></div>
         </div>
 
         <div class="info-field">
